--- a/13_Parallel.ipynb
+++ b/13_Parallel.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-10-29T08:21:44.288118500Z",
-     "start_time": "2023-10-29T08:21:44.272069600Z"
+     "end_time": "2023-10-29T08:47:09.285598700Z",
+     "start_time": "2023-10-29T08:47:09.275583200Z"
     }
    },
    "outputs": [
@@ -32,119 +32,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-29T08:21:44.910162700Z",
-     "start_time": "2023-10-29T08:21:44.284069800Z"
-    }
-   },
+   "execution_count": 7,
    "outputs": [],
    "source": [
+    "from joblib import Parallel, delayed\n",
     "import numpy as np\n",
-    "import time\n",
     "\n",
     "def random_square(seed):\n",
-    "    np.random.seed(seed=seed)\n",
-    "    random_num=np.random.randint(0,10)\n",
+    "    np.random.seed(seed)\n",
+    "    random_num = np.random.randint(0, 10)\n",
     "    return random_num**2"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-29T08:47:11.716504600Z",
+     "start_time": "2023-10-29T08:47:11.512661500Z"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-29T08:21:44.927887400Z",
-     "start_time": "2023-10-29T08:21:44.911162500Z"
-    }
-   },
+   "execution_count": 8,
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Execution time 0.004215717315673828 s\n"
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 20 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  10 tasks      | elapsed:    1.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 260 tasks      | elapsed:    2.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 17940 tasks      | elapsed:    2.5s\n",
+      "[Parallel(n_jobs=-1)]: Done 948632 tasks      | elapsed:    5.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 1000000 out of 1000000 | elapsed:    5.2s finished\n"
      ]
     }
    ],
    "source": [
-    "# Serial version\n",
-    "t0 = time.time()\n",
-    "results = []\n",
-    "for i in range(1000): \n",
-    "    results.append(random_square(i))\n",
-    "t1 = time.time()\n",
-    "print(f'Execution time {t1 - t0} s')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+    "results = Parallel(n_jobs=-1,verbose=1)(delayed(random_square)(i) for i in range(1000000))"
+   ],
    "metadata": {
-    "is_executing": true,
+    "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-10-29T08:21:44.928886900Z"
+     "end_time": "2023-10-29T08:47:19.385733900Z",
+     "start_time": "2023-10-29T08:47:14.053730800Z"
     }
-   },
-   "outputs": [],
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "# Parallel version\n",
-    "t0 = time.time()\n",
-    "n_cpu = mp.cpu_count()\n",
-    "\n",
-    "pool = mp.Pool(processes=n_cpu-5)\n",
-    "results = [pool.map(random_square, range(100))]\n",
-    "t1 = time.time()\n",
-    "print(f'Execution time {t1 - t0} s')"
-   ]
+    "### Problems\n",
+    "##### Use multiprocessing package to parallel the following code, and record the running time.\n",
+    "##### Use joblib to parallel the above example, and use the multiprocessing as the backend."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "is_executing": true
-   },
+   "execution_count": 9,
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "plt.style.use('seaborn-poster')\n",
-    "%matplotlib inline\n",
-    "\n",
-    "def serial(n):\n",
-    "    t0 = time.time()\n",
-    "    results = []\n",
-    "    for i in range(n): \n",
-    "        results.append(random_square(i))\n",
-    "    t1 = time.time()\n",
-    "    exec_time = t1 - t0\n",
-    "    return exec_time\n",
-    "\n",
-    "def parallel(n):\n",
-    "    t0 = time.time()\n",
-    "    n_cpu = mp.cpu_count()\n",
-    "\n",
-    "    pool = mp.Pool(processes=n_cpu)\n",
-    "    results = [pool.map(random_square, range(n))]\n",
-    "    t1 = time.time()\n",
-    "    exec_time = t1 - t0\n",
-    "    return exec_time\n",
-    "\n",
-    "\n",
-    "n_run = np.logspace(1, 7, num = 7)\n",
-    "t_serial = [serial(int(n)) for n in n_run]\n",
-    "t_parallel = [parallel(int(n)) for n in n_run]\n",
-    "\n",
-    "\n",
-    "plt.figure(figsize = (10, 6))\n",
-    "plt.plot(n_run, t_serial, '-o', label = 'serial')\n",
-    "plt.plot(n_run, t_parallel, '-o', label = 'parallel')\n",
-    "plt.loglog()\n",
-    "plt.legend()\n",
-    "plt.ylabel('Execution time (s)')\n",
-    "plt.xlabel('Number of random points')\n",
-    "plt.show()"
-   ]
+    "def plus_cube(x, y):\n",
+    "    return (x+y)**3"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-29T08:47:25.292876600Z",
+     "start_time": "2023-10-29T08:47:25.277122500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [],
+   "source": [
+    "results=[]\n",
+    "for x, y in zip(range(10000), range(10000)):\n",
+    "    results.append(plus_cube(x, y))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-29T08:48:45.602813200Z",
+     "start_time": "2023-10-29T08:48:45.595943500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 20 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  10 tasks      | elapsed:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 600 tasks      | elapsed:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 8850 tasks      | elapsed:    0.1s\n",
+      "[Parallel(n_jobs=-1)]: Done 9961 out of 10000 | elapsed:    0.1s remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 10000 out of 10000 | elapsed:    0.1s finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "results=Parallel(n_jobs=-1,verbose=1)(delayed(plus_cube)(i,j) for i,j in zip(range(10000), range(10000)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-29T08:50:33.320517900Z",
+     "start_time": "2023-10-29T08:50:33.101576400Z"
+    }
+   }
   }
  ],
  "metadata": {
